--- a/blog/templates/header.html
+++ b/blog/templates/header.html
@@ -10,6 +10,7 @@
   <meta name="author" content="">
 
   <title>Obada's Blog</title>
+  <link rel="shortcut icon" type="image/png" href="{% static 'img/blog.png' %}" >
 
   <!-- Bootstrap core CSS -->
   <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
